lots of changes

--- a/notebooks/Get Urls test.ipynb
+++ b/notebooks/Get Urls test.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/khaxis/workspace/image_tags/notebooks\n"
+     ]
+    }
+   ],
    "source": [
     "from pymongo import MongoClient\n",
-    "import os"
+    "import os\n",
+    "\n",
+    "print os.getcwd()"
    ]
   },
   {
@@ -5766,7 +5776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -5780,7 +5790,7 @@
     "\ttry:\n",
     "\t\trequest = requests.get(url, timeout=1, stream=True, allow_redirects=False)\n",
     "\t\tprint request.status_code\n",
-    "\t\tif request.status_code == 302:\n",
+    "\t\tif request.status_code == 301:\n",
     "\t\t\treturn False    \n",
     "\texcept:\n",
     "\t\treturn False\n",
@@ -5808,7 +5818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -5823,27 +5833,34 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "url = 'http://articles.mercola.com/ImageServer/Public/2006/08-august/8.14gut.jpg'\n",
+    "#url = 'http://floridakiss.com/kiss_e_gram/April08/images/aquaticaPlunge.jpg'\n",
+    "url = 'http://floridakiss.com/kiss_e_gram/April08/images/aquaticaPlunge.jpg'\n",
     "downloadSingleImage(url, '/tmp/a.jpg')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('..'))  # dirty hack, but ok for research\n",
+    "from utils import img_collection as icoll"
+   ]
   }
  ],
  "metadata": {
